@@ -220,8 +220,7 @@ namespace CIAO
                     "Received %u properties for configuration\n",
                     props.length ()));
 
-    this->orb_ = 
-      CORBA::ORB::_duplicate (DAnCE::PLUGIN_MANAGER::instance ()->get_orb ());
+    this->orb_ = DAnCE::PLUGIN_MANAGER::instance ()->get_orb ();
     
     if (CORBA::is_nil (this->orb_))
       {
